updated with counter on home page + ability to clear

--- a/templates/evaluate.html
+++ b/templates/evaluate.html
@@ -40,7 +40,17 @@
 <div id="right" class="container {{right_highlight }} {{ right_is_ours }}"><img width="100%" src="{{ right_image }}" alt="Right">
 </div>
 
-<p>Directions:</p>
-<p> w = prefer left, r = prefer right, e = prefer equally. left = previous image, right = next image.</p>
+<div>
+<p>Commands:</p>
+<ul style="list-style-type: none;">
+    <li><b>w</b>: prefer left</li>
+    <li><b>r</b>: prefer right</li>
+    <li><b>e</b>: equal/ no preference</li>
+    <li><b>space</b>: clear selection</li>
+    <li><b>left</b>: previous image</li>
+    <li><b>right</b>: next image</li>
+    <li><b>enter</b>: submit (left and right submit automatically)</li>
+</ul>
+</div>
 </body>
 </html>
